--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   <link rel="icon" href="favicon.ico" type="image/x-icon">
   <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+
 </head>
 <body>
 
@@ -19,11 +21,15 @@
       <a href="#about">About</a>
       <a href="#skills">Skills</a>
       <a href="#projects">Projects</a>
+      <a href="#technologies">Technologies</a>
       <a href="#certifications">Certifications</a>
       <a href="#resume">Curriculum Vitae</a>
       <a href="#contact">Contact</a>
     </nav>
+    <button id="mode-toggle" class="mode-toggle">☀️ Light Mode</button>
+
   </header>
+  
 
   <!-- Mobile Navigation -->
   <div class="mobile-nav">
@@ -32,6 +38,7 @@
       <a href="#about">About</a>
       <a href="#skills">Skills</a>
       <a href="#projects">Projects</a>
+      <a href="#technologies">Technologies</a>
       <a href="#certifications">Certifications</a>
       <a href="#resume">Curriculum Vitae</a>
       <a href="#contact">Contact</a>
@@ -44,7 +51,12 @@
   <div class="about-wrapper">
     <div class="about-text">
       <h2>About Me</h2>
-      <h1>Tayyab Mehmood</h1>
+      <h2>
+  <span class="code-intro">console.log("</span>
+  <span class="code-hello">Hello, this is</span>
+  <span class="code-intro">");</span>
+</h2>
+      <h1 class="glow-name">Tayyab Mehmood</h1>
       <p><span id="typed-about"></span></p>
     </div>
     <div class="about-image">
@@ -52,8 +64,6 @@
     </div>
   </div>
 </section>
-
-
   <section id="skills" data-aos="fade-up">
     <h2>Languages</h2>
     <div class="skill-bars">
@@ -105,9 +115,9 @@
         <span class="tag">OOP</span>
         <span class="tag">MySQL</span>
       </div>
-      <div class="project-links">
-        <a href="https://github.com/tayyabmehmod/Banking_system" target="_blank">Visit</a>
-      </div>
+      <a href="https://github.com/tayyabmehmod/Banking_system" target="_blank" class="github-bottom-left" title="GitHub">
+        <i class="fab fa-github"></i>
+      </a>
     </div>
 
     <!-- Project 2 -->
@@ -120,9 +130,9 @@
         <span class="tag">CSS</span>
         <span class="tag">JavaScript</span>
       </div>
-      <div class="project-links">
-        <a href="https://github.com/tayyabmehmod/Nature-wonder" target="_blank">Visit</a>
-      </div>
+      <a href="https://github.com/tayyabmehmod/Nature-wonder" target="_blank" class="github-bottom-left" title="GitHub">
+        <i class="fab fa-github"></i>
+      </a>
     </div>
 
     <!-- Project 3 -->
@@ -135,9 +145,9 @@
         <span class="tag">AI</span>
         <span class="tag">Tkinter</span>
       </div>
-      <div class="project-links">
-        <a href="https://github.com/tayyabmehmod/Jarvis" target="_blank">Visit</a>
-      </div>
+      <a href="https://github.com/tayyabmehmod/Jarvis" target="_blank" class="github-bottom-left" title="GitHub">
+        <i class="fab fa-github"></i>
+      </a>
     </div>
 
     <!-- Project 4 -->
@@ -150,14 +160,33 @@
         <span class="tag">CSS</span>
         <span class="tag">JavaScript</span>
       </div>
-      <div class="project-links">
-        <a href="https://github.com/tayyabmehmod/code_world" target="_blank">Visit</a>
+      <a href="https://github.com/tayyabmehmod/code_world" target="_blank" class="github-bottom-left" title="GitHub">
+        <i class="fab fa-github"></i>
+      </a>
+    </div>
+
+    <!-- Project 5 -->
+    <div class="project">
+      <img src="images/tform.png" alt="Travel Form" class="project-image" />
+      <h3>Travel Form</h3>
+      <p>A dynamic travel form using full stack to collect & store user details with validation.</p>
+      <div class="project-tags">
+        <span class="tag">HTML</span>
+        <span class="tag">CSS</span>
+        <span class="tag">JavaScript</span>
+        <span class="tag">Php</span>
+        <span class="tag">My Sql</span>
       </div>
+      <a href="https://github.com/tayyabmehmod/trip_form" target="_blank" class="github-bottom-left" title="GitHub">
+        <i class="fab fa-github"></i>
+      </a>
+      <a href="https://trip-form.rf.gd/" target="_blank" class="visit-bottom-right" title="Live Demo">
+    Visit
+  </a>
     </div>
 
   </div>
 </section>
-
 
   <section id="technologies" data-aos="fade-up">
     <h2>Technologies I Use</h2>
@@ -220,12 +249,14 @@
 </section>
 
   <footer>
-    <p>© 2025 Tayyab Mehmood</p>
+    <p class="code-style">getInTouch()<span class="cursor">;</span></p>
     <div class="socials">
-      <a href="https://github.com/tayyabmehmod" target="_blank"><i class="fab fa-github"></i></a>
-      <a href="https://linkedin.com/in/tayyab-mehmood-2b134a284" target="_blank"><i class="fab fa-linkedin"></i></a>
-      <a href="https://instagram.com/mehmood._.0" target="_blank"><i class="fab fa-instagram"></i></a>
-    </div>
+  <a href="https://github.com/tayyabmehmod" target="_blank"><i class="fab fa-github"></i></a>
+  <a href="https://linkedin.com/in/tayyab-mehmood-2b134a284" target="_blank"><i class="fab fa-linkedin"></i></a>
+  <a href="https://instagram.com/mehmood._.0" target="_blank"><i class="fab fa-instagram"></i></a>
+</div>
+
+     <p>© 2025 Tayyab Mehmood</p>
   </footer>
 
   <!-- SCRIPTS -->
@@ -320,6 +351,26 @@
     }
   });
 </script>
+
+ <script>
+  document.addEventListener("DOMContentLoaded", function () {
+    const toggleBtn = document.getElementById('mode-toggle');
+    const body = document.body;
+
+    toggleBtn.addEventListener('click', () => {
+      body.classList.toggle('light-mode');
+
+      if (body.classList.contains('light-mode')) {
+        toggleBtn.textContent = '🌙 Dark Mode';
+      } else {
+        toggleBtn.textContent = '☀️ Light Mode';
+      }
+    });
+  });
+</script>
+
+
+
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 
 </body>
