--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <a href="#resume">Curriculum Vitae</a>
       <a href="#contact">Contact</a>
     </nav>
-    <button id="mode-toggle" class="mode-toggle">☀️ Light Mode</button>
+    <button id="mode-toggle" class="mode-toggle">☀️</button>
 
   </header>
   
@@ -52,9 +52,9 @@
     <div class="about-text">
       <h2>About Me</h2>
       <h2>
-  <span class="code-intro">console.log("</span>
-  <span class="code-hello">Hello, this is</span>
-  <span class="code-intro">");</span>
+  <span class="code-intro">cout<<"</span>
+  <span class="code-hello">"Hello, this is"</span>
+  <span class="code-intro">;</span>
 </h2>
       <h1 class="glow-name">Tayyab Mehmood</h1>
       <p><span id="typed-about"></span></p>
