--- a/index.html
+++ b/index.html
@@ -361,9 +361,9 @@
       body.classList.toggle('light-mode');
 
       if (body.classList.contains('light-mode')) {
-        toggleBtn.textContent = '🌙 Dark Mode';
+        toggleBtn.textContent = '🌙';
       } else {
-        toggleBtn.textContent = '☀️ Light Mode';
+        toggleBtn.textContent = '☀️';
       }
     });
   });
