--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
           title="GitHub">
           <i class="fab fa-github"></i>
         </a>
-        <a href="https://resumebuilder.rf.gd/" target="_blank" class="visit-bottom-right" title="Live Demo">Visit</a>
+        <a href="https://resumesbuilder.free.nf/login.php" target="_blank" class="visit-bottom-right" title="Live Demo">Visit</a>
       </div>
 
     </div>
