--- a/index.html
+++ b/index.html
@@ -225,6 +225,23 @@
         <a href="https://resumesbuilder.free.nf/login.php" target="_blank" class="visit-bottom-right" title="Live Demo">Visit</a>
       </div>
 
+      <!-- Typing Speed Game -->
+<div class="project">
+  <img src="images/typing.png" alt="Typing Speed Game Screenshot" class="project-image" />
+  <h3>Typing Speed Game</h3>
+  <p>A fun and interactive typing game that challenges users to type randomly generated words quickly and accurately. Built using HTML, CSS, and JavaScript with live score tracking and difficulty levels.</p>
+  <div class="project-tags">
+    <span class="tag">HTML</span>
+    <span class="tag">CSS</span>
+    <span class="tag">JavaScript</span>
+  </div>
+  <a href="https://github.com/tayyabmehmod/typing_game" target="_blank" class="github-bottom-left" title="GitHub">
+    <i class="fab fa-github"></i>
+  </a>
+  <a href="https://tayyabmehmod.github.io/typing_game/" target="_blank" class="visit-bottom-right" title="Live Demo">Visit</a>
+</div>
+
+
     </div>
   </section>
 
