--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <link rel="icon" href="favicon.ico" type="image/x-icon">
   <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 
 </head>
 
@@ -26,7 +27,7 @@
       <a href="#projects">Projects</a>
       <a href="#technologies">Technologies</a>
       <a href="#certifications">Certifications</a>
-      <a href="#resume">Curriculum Vitae</a>
+      <!-- <a href="#resume">Curriculum Vitae</a> -->
       <a href="#contact">Contact</a>
     </nav>
     <button id="mode-toggle" class="mode-toggle">☀️</button>
@@ -60,12 +61,29 @@
               <span class="code-intro">;</span>
         </h2>
         <h1 class="glow-name">Tayyab Mehmood</h1>
-        <p><span id="typed-about"></span></p>
+        <p>
+  I’m a Full-Stack Developer passionate about creating responsive, user-friendly web applications. I work with HTML, CSS, JavaScript, PHP, and MySQL to turn ideas into functional solutions. <br><br>
+
+  I also have experience with Java, Python, and C++, allowing me to build efficient and robust software systems. <br><br>
+
+  I'm driven by clean UI design, great user experiences, and continuous learning. I'm currently exploring Android development to expand into mobile app creation.
+</p>
+
+<a href="https://drive.google.com/file/d/1vNxBrQ2Kj2nCWNd4aFxn1T3JdWih6OKL/view?usp=sharing" 
+   target="_blank" 
+   class="resume-link">
+  📥 Resume
+</a>
+
+
+
       </div>
       <div class="about-image">
         <img src="images/tyb.png" alt="Tayyab Mehmood">
       </div>
     </div>
+    
+
   </section>
   <section id="skills" data-aos="fade-up">
     <h2>Languages</h2>
@@ -120,7 +138,7 @@
 
       <!-- ATM Simulator -->
       <div class="project">
-        <img src="images/atm.png" alt="ATM Simulator Screenshot" class="project-image" />
+        <img src="images/atm.png" loading="lazy" alt="ATM Simulator Screenshot" class="project-image" />
         <h3>ATM Simulator System</h3>
         <p>A GUI-based banking simulator that mimics real-world ATM operations. Built with Java and MySQL, it includes
           secure login, transaction history, and cash operations using OOP concepts.</p>
@@ -154,7 +172,7 @@
 
       <!-- Jarvis -->
       <div class="project">
-        <img src="images/jarvis.jpeg" alt="Jarvis Screenshot" class="project-image" />
+        <img src="images/jarvis.jpeg" loading="lazy"  alt="Jarvis Screenshot" class="project-image" />
         <h3>Jarvis with GUI</h3>
         <p>A desktop voice assistant created using Python and Tkinter. It automates everyday tasks like opening apps,
           searching online, telling time, and more through voice commands.</p>
@@ -170,7 +188,7 @@
 
       <!-- Code World -->
       <div class="project">
-        <img src="images/code.png" alt="Code World Screenshot" class="project-image" />
+        <img src="images/code.png" loading="lazy" alt="Code World Screenshot" class="project-image" />
         <h3>Code World</h3>
         <p>An educational code-sharing prototype that promotes collaborative learning. Built with HTML, CSS, and JS, it
           allows users to explore and share snippets in an interactive layout.</p>
@@ -186,9 +204,10 @@
         </a>
       </div>
 
+        
       <!-- Travel Form -->
       <div class="project">
-        <img src="images/tform.png" alt="Travel Form" class="project-image" />
+        <img src="images/tform.png" loading="lazy" alt="Travel Form" class="project-image" />
         <h3>Travel Form</h3>
         <p>A full-stack travel application that collects and stores user info in a MySQL database. Includes form
           validation, clean UI, and PHP backend integration with a live deployment.</p>
@@ -196,6 +215,7 @@
           <span class="tag">HTML</span>
           <span class="tag">CSS</span>
           <span class="tag">JavaScript</span>
+
           <span class="tag">Php</span>
           <span class="tag">My Sql</span>
         </div>
@@ -207,7 +227,7 @@
 
       <!-- Resume Builder -->
       <div class="project">
-        <img src="images/resume.png" alt="Resume Builder Screenshot" class="project-image" />
+        <img src="images/resume.png" loading="lazy" alt="Resume Builder Screenshot" class="project-image" />
         <h3>Resume Builder</h3>
         <p>A secure web application where users can register, verify via OTP, input resume data, and download a PDF
           version of their resume. Built using PHP, MySQL, and JavaScript.</p>
@@ -227,7 +247,7 @@
 
       <!-- Typing Speed Game -->
 <div class="project">
-  <img src="images/typing.png" alt="Typing Speed Game Screenshot" class="project-image" />
+  <img src="images/typing.png" loading="lazy" alt="Typing Speed Game Screenshot" class="project-image" />
   <h3>Typing Speed Game</h3>
   <p>A fun and interactive typing game that challenges users to type randomly generated words quickly and accurately. Built using HTML, CSS, and JavaScript with live score tracking and difficulty levels.</p>
   <div class="project-tags">
@@ -239,6 +259,25 @@
     <i class="fab fa-github"></i>
   </a>
   <a href="https://tayyabmehmod.github.io/typing_game/" target="_blank" class="visit-bottom-right" title="Live Demo">Visit</a>
+</div>
+
+<!-- Expense Tracker -->
+<div class="project">
+  <img src="images/expense_tracker.png" loading="lazy"  alt="Expense Tracker Screenshot" class="project-image" />
+  <h3>Expense & Budget Tracker</h3>
+  <p>A full-featured web app that allows users to log, categorize, and visualize expenses. Includes user registration, filters, charts, and monthly balance insights using PHP, JS, Chart.js, and MySQL.</p>
+  <div class="project-tags">
+    <span class="tag">HTML</span>
+    <span class="tag">CSS</span>
+    <span class="tag">JavaScript</span>
+    <span class="tag">PHP</span>
+    <span class="tag">MySQL</span>
+    <span class="tag">Chart.js</span>
+  </div>
+  <a href="https://github.com/tayyabmehmod/expense_tracker" target="_blank" class="github-bottom-left" title="GitHub">
+    <i class="fab fa-github"></i>
+  </a>
+  <a href="https://expensetracker.gt.tc/index.php" target="_blank" class="visit-bottom-right" title="Live Demo">Visit</a>
 </div>
 
 
@@ -294,15 +333,15 @@
     </div>
   </section>
 
-  <section id="resume" data-aos="fade-up">
+  <!-- <section id="resume" data-aos="fade-up">
     <h2>Resume</h2>
     <p><a href="https://drive.google.com/file/d/1vNxBrQ2Kj2nCWNd4aFxn1T3JdWih6OKL/view?usp=sharing" download>Download My
         Resume (PDF)</a></p>
-  </section>
+  </section> -->
 
   <section id="contact">
     <div class="contact-container">
-      <h2>Contact Me</h2>
+      <h2 class="code-style">getInTouch()<span class="cursor">;</span></h2>
       <form id="contact-form" action="https://formspree.io/f/mwpbjlrl" method="POST">
         <input type="text" name="name" placeholder="Your Name" required>
         <input type="email" name="_replyto" placeholder="Your Email" required>
@@ -379,7 +418,7 @@
     });
   </script>
 
-  <script>
+  <!-- <script>
     new Typed('#typed-about', {
       strings: [
         "A dedicated Full-Stack Developer with a passion for building responsive, user-friendly websites and web applications. I specialize in both front-end and back-end development, turning ideas into fully functional solutions using HTML, CSS, JavaScript, PHP, and MySQL.",
@@ -393,7 +432,7 @@
       loop: true,
       showCursor: true
     });
-  </script>
+  </script> -->
   <script>
     const form = document.getElementById('contact-form');
     const formMessage = document.getElementById('form-message');
@@ -425,25 +464,26 @@
     });
   </script>
 
+<script>
+  document.addEventListener("DOMContentLoaded", function () {
+    const toggleBtn = document.getElementById('mode-toggle');
+    const body = document.body;
 
-  <script>
-    document.addEventListener("DOMContentLoaded", function () {
-      const toggleBtn = document.getElementById('mode-toggle');
-      const body = document.body;
+    // Check and apply stored theme
+    const storedMode = localStorage.getItem("theme");
+    if (storedMode === "light") {
+      body.classList.add("light-mode");
+      toggleBtn.textContent = '🌙';
+    }
 
-      toggleBtn.addEventListener('click', () => {
-        body.classList.toggle('light-mode');
-
-        if (body.classList.contains('light-mode')) {
-          toggleBtn.textContent = '🌙';
-        } else {
-          toggleBtn.textContent = '☀️';
-        }
-      });
+    toggleBtn.addEventListener('click', () => {
+      body.classList.toggle('light-mode');
+      const currentMode = body.classList.contains('light-mode') ? 'light' : 'dark';
+      toggleBtn.textContent = currentMode === 'light' ? '🌙' : '☀️';
+      localStorage.setItem("theme", currentMode);
     });
-
-  </script>
-
+  });
+</script>
 
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
