--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       <a href="#projects">Projects</a>
       <a href="#technologies">Technologies</a>
       <a href="#certifications">Certifications</a>
-      <a href="#resume">Curriculum Vitae</a>
+      <!-- <a href="#resume">Curriculum Vitae</a> -->
       <a href="#contact">Contact</a>
     </div>
 
