--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <meta name="description"
     content="Portfolio of Tayyab Mehmood. Developer, Content Creator, and Social Media Marketer." />
   <title>Tayyab Mehmood | Portfolio</title>
+  <meta name="google-site-verification" content="hXw-Ma6TxvccY60ZySRqPQ61sv0YyTymlwMLdX4eyx4" />
+
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles.css">
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
@@ -523,3 +525,4 @@
 </body>
 
 </html>
+
