--- a/index.html
+++ b/index.html
@@ -6,7 +6,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description"
     content="Portfolio of Tayyab Mehmood. Developer, Content Creator, and Social Media Marketer." />
-  <title>Tayyab Mehmood | Portfolio</title>
+ <title>Tayyab Mehmood | Developer Portfolio</title>
+<meta name="description" content="Official portfolio of Tayyab Mehmood – showcasing web development, Android projects, and contact details.">
+<meta name="keywords" content="Tayyab Mehmood, Web Developer, Android Developer, Portfolio, HTML, CSS, JavaScript, Kotlin">
+<meta name="author" content="Tayyab Mehmood">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
   <meta name="google-site-verification" content="hXw-Ma6TxvccY60ZySRqPQ61sv0YyTymlwMLdX4eyx4" />
 
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap" rel="stylesheet">
@@ -525,4 +530,3 @@
 </body>
 
 </html>
-
