--- a/index.html
+++ b/index.html
@@ -341,8 +341,9 @@
       </div>
       <div class="cert-card">
         <i class="fas fa-laptop-code"></i>
-        <p>HTML/CSS/JS</p>
-        <span>Learn At Home</span>
+       <p><a href="https://drive.google.com/file/d/110kX4WKAzGYQKgiI-UV_d__iMKtXFn1n/view?usp=sharing"
+            target="_blank">View Front-End Certificate</a></p>
+        <span>Simplilearn</span>
       </div>
     </div>
   </section>
